--- a/openEduc/css.css
+++ b/openEduc/css.css
@@ -1,6 +1,89 @@
 .eff{
     margin-bottom: 50px;
 }
-.green{
-    color: #b3e567;
+
+
+header{
+    background-color: white;
+    box-shadow: 0px 15px 10px -15px gray;
+    display: flex;
+    align-items:baseline;
+}
+
+.menu{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+
+p{
+    margin: 0.5em;
+}
+
+h1{
+    margin-left: 2em;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.logo{
+    width: 5em;
+    height: 5em;
+    margin: 0em 0.5em 0em 0.5em;
+}
+
+.champs{
+    border-radius: 0.7em;
+    height: 2em;
+    width: 20em;
+    border: 0em;
+}
+
+body{
+    background-color: #eeeeee;
+    text-align: left;
+    margin: 0em;
+    display:felx;
+    font-family: Arial, Helvetica, sans-serif;
+    min-height:fit-content;
+}
+
+form{
+    margin-left: 2em;
+}
+
+
+footer{
+    background-color: white;
+    
+}
+.footer{
+    display: flex;
+    align-items: center;
+    padding-bottom: 0.5em;
+}
+.bande{
+    background-color: #b9e567;
+    height: 1em;
+    margin-bottom: 0.5em;
+}
+
+.button{
+    background-color: #b9e567;
+    color: white;
+    font-size:1em;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.7em;
+    margin: 0.2em;
+    border-radius: 2em;
+    border: 0em;
+}
+.button:hover{
+    background-color:#b9e567;
+    color: white;
+    font-size:1em;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.7em;
+    margin: 0.2em;
+    border-radius: 2em;
 }
