--- a/openEduc/css.css
+++ b/openEduc/css.css
@@ -10,6 +10,20 @@ header{
     align-items:baseline;
 }
 
+
+.lienHeader{
+    margin-left: 1em;
+    text-decoration: none;
+    color: black;
+    font-size: 1.25em;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding-bottom: 0.5em;
+}
+.lienHeader:hover{
+    color: #343131;
+}
+
+
 .menu{
     display: flex;
     align-items: center;
@@ -18,7 +32,7 @@ header{
 
 
 p{
-    margin: 0.5em;
+    margin: 1em;
 }
 
 h1{
@@ -26,6 +40,16 @@ h1{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+h2{
+    margin-left: 3em;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.logoH{
+    width: 5em;
+    height: 5em;
+    margin: 0em 20em 0em 0.5em;
+}
 .logo{
     width: 5em;
     height: 5em;
